--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,4 +30,12 @@
     .hero{
         grid-column: span 4;
     }
+    
+    .space{
+        .project-preview {
+            background-color: blue;
+        
+        }
+
+    }
 }
