--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -34,18 +34,18 @@ html {
    font-size: clamp(10px, 1vw, 16px);
 }
 
-.prom-text {
-   p {
-       font-size: 2rem;
-       line-height: 2.5rem;
-       margin-bottom: 1rem;
-       font-family: Kleukens;
-   }
-}
+// .prom-text {
+//    p {
+//        font-size: 2rem;
+//        line-height: 2.5rem;
+//        margin-bottom: 1rem;
+//        font-family: Kleukens;
+//    }
+// }
 
 
-p.caption {
-   margin-top: 0.2rem;
-   font-family: Kleukens;
-   font-size: 1.8rem;
-}
+// p.caption {
+//    margin-top: 0.2rem;
+//    font-family: Kleukens;
+//    font-size: 1.8rem;
+// }
