--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,27 +1,24 @@
-.blog{
-    overflow: hidden;
-    padding: 0rem 0.5rem;
+.blog-section{
+    .blog, .space {
+        overflow: hidden;
+        padding: 0rem 0.5rem;
     
-    .project-list {
-        margin-top: 3rem;
-        
-    }
+        .project-list {
+            margin-top: 3rem;   
+        }
     
-    .project-preview {
-        width: 100%;
-
         .preview-title {
             margin: 0.5rem 0rem;
             margin-bottom: 0rem;
-
+    
             display: flex;
             align-items: flex-start;
             gap: 0.5rem;
             transition: all 0.5s ease;
-
+    
             h1 {
-
-                font-size: 3rem;
+    
+                font-size: 1rem;
                 line-height: 3rem;
                 // font-size: 3.5rem;
                 // line-height: 3.65rem;
@@ -35,31 +32,31 @@
                 vertical-align: top;
                 margin-top: -0.2rem;
             }
-
+    
             h2 {
                 display: inline;
                 text-align: end;
-
+    
                 vertical-align: top;
                 font-size: 1.5rem;
                 font-family: Kleukens;
                 // margin: 0rem 0.5rem;
             }
-
+    
             .date {
                 grid-column: 1/2;
             }
-
+    
             .type {
                 grid-column: 11/13;
                 text-align: end;
-
+    
             }
-
+    
             .work-year {
                 display: none;
             }
-
+    
             .cover-image {
                 // width: min-content;
                 // order: 2;
@@ -68,7 +65,7 @@
                 // width: 100%;
                 margin: 0rem;
                 padding: 0rem;
-
+    
                 .image-section,
                 .video-section,
                 .gatsby-image-wrapper {
@@ -76,15 +73,15 @@
                     object-position: center center;
                     width: 100%;
                     height: 100%;
-
+    
                 }
-
+    
                 iframe {
                     width: 100%;
                     height: 100%;
-                    // border-radius: 0.5rem;
+                    border-radius: 5rem;
                 }
-
+    
                 img,
                 video {
                     width: auto;
@@ -92,102 +89,106 @@
                     object-fit: contain;
                     object-position: center center;
                     border-radius: 1rem;
-
-                }
-            }
-
-        }
-
-    }
-
-    // .project-preview:hover {
-
-    //     .cover-image {
-    //         transform: scale(1.5);
-    //         z-index: 10;
-    //     }
-
-    //     .project-description {
-    //         flex-basis: 100%;
-    //         // margin-top: 0vh;
-    //         // display: block;
-    //         // width: 100%;
-    //     }
-    // }
-}
-
-.blog {
     
-    .project-preview {
-        .blogpostcover {
+                }
+            }
+    
+        }
+    
+        .project-preview {
             width: 100%;
-            display: flex;
-            margin-bottom: 0.5rem;
-            // flex-wrap: wrap;
-            
-            // .preview-title {
-                h1 {
-                    font-size: 5rem;
-                    grid-column: span 8;
-                }
-                
-                h2{
-                font-size: 1.5rem;
-            }
-
-
-            .cover-image {
-                // margin: 0rem 1rem;
-                // grid-column: span 1;
-                // height: 5vh;
-                img,
-                video {
-                    width: min-content;
-                    height: 20vh;
-                    border-radius: 1rem;
-
-                }
-            }
-
-            .project-description {
-                // max-width: 70vw;
-                // max-width: max-content;
-                // margin-bottom: 2rem;
-
-                padding: 0rem 0.5rem;
+    
+            .blogpostcover {
+                width: 100%;
                 display: flex;
-                flex-direction: column;
-                // align-items: space-between;
-                // justify-content: space-between;
+                margin-bottom: 0.5rem;
+                // flex-wrap: wrap;
                 
-                // flex-basis: 100%;
-                // white-space: nowrap;
-                // flex-shrink: 0;
-                transition: all 0.5s ease;
-                
-                font-family: Kleukens;
-                font-size: 1.5rem;
-                line-height: 1.8rem;
-                max-width: 70vw;
-                
-                p{
-                    margin-top: 1rem;
-                    max-width: 60vw;
-                    // display: none;
-            
+                // .preview-title {
+                    h1 {
+                        font-size: 1rem;
+                        grid-column: span 8;
+                    }
+                    
+                    h2{
+                    font-size: 1.5rem;
                 }
-            
-            }
+    
+    
+                .cover-image {
+                    // margin: 0rem 1rem;
+                    // grid-column: span 1;
+                    // height: 5vh;
+                    img,
+                    video {
+                        width: min-content;
+                        height: 20vh;
+                        border-radius: 1rem;
+                    }
 
-            .type {
-                justify-self: flex-end;
-                text-align: end;
-                margin-left: auto;
-
+                    iframe {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 5rem;
+                    }
+                }
+    
+                .project-description {
+                    // max-width: 70vw;
+                    // max-width: max-content;
+                    // margin-bottom: 2rem;
+    
+                    padding: 0rem 0.5rem;
+                    display: flex;
+                    flex-direction: column;
+                    // align-items: space-between;
+                    // justify-content: space-between;
+                    
+                    // flex-basis: 100%;
+                    // white-space: nowrap;
+                    // flex-shrink: 0;
+                    transition: all 0.5s ease;
+                    
+                    font-family: Kleukens;
+                    font-size: 1.5rem;
+                    line-height: 1.8rem;
+                    max-width: 70vw;
+                    
+                    p{
+                        margin-top: 1rem;
+                        max-width: 60vw;
+                        // display: none;
+                
+                    }
+                
+                }
+    
+                .type {
+                    justify-self: flex-end;
+                    text-align: end;
+                    margin-left: auto;
+    
+                }
             }
         }
+    
+            // .project-preview:hover {
+    
+        //     .cover-image {
+        //         transform: scale(1.5);
+        //         z-index: 10;
+        //     }
+    
+        //     .project-description {
+        //         flex-basis: 100%;
+        //         // margin-top: 0vh;
+        //         // display: block;
+        //         // width: 100%;
+        //     }
+        // }
     }
 }
+
 
 
 
