--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,349 +1,349 @@
-.work-page,
-.work-section {
-    overflow: hidden;
+// .work-page,
+// .work-section {
+//     overflow: hidden;
 
-    .project-list {
-        width: 100%;
-        overflow: hidden;
-        // padding: 0rem 0.5rem;
-        // margin-top: 1rem;
+//     .project-list {
+//         width: 100%;
+//         overflow: hidden;
+//         // padding: 0rem 0.5rem;
+//         // margin-top: 1rem;
 
-        display: grid;
-        grid-template-columns: repeat(1, minmax(0, 1fr));
-        gap: 0.5rem;
+//         display: grid;
+//         grid-template-columns: repeat(1, minmax(0, 1fr));
+//         gap: 0.5rem;
 
-        a {
-            height: max-content;
-        }
+//         a {
+//             height: max-content;
+//         }
 
-        // .full-width {
-        //     grid-column: span 1;
+//         // .full-width {
+//         //     grid-column: span 1;
 
-        //     // display: grid;
-        //     // grid-template-columns: repeat(3, minmax(0, 1fr));
-        //     // gap: 0.5rem;
-        //     .project-preview {
-        //         .cover-image {
-        //             // grid-column: span 2;
-        //             // order: 2;
-        //             height: 100%;
+//         //     // display: grid;
+//         //     // grid-template-columns: repeat(3, minmax(0, 1fr));
+//         //     // gap: 0.5rem;
+//         //     .project-preview {
+//         //         .cover-image {
+//         //             // grid-column: span 2;
+//         //             // order: 2;
+//         //             height: 100%;
 
-        //             .image-section,
-        //             .video-section,
-        //             .gatsby-image-wrapper {
-        //                 object-fit: cover;
-        //                 object-position: center center;
-        //                 width: 100%;
-        //                 // max-height: 100%;
-        //                 height: 70vh;
+//         //             .image-section,
+//         //             .video-section,
+//         //             .gatsby-image-wrapper {
+//         //                 object-fit: cover;
+//         //                 object-position: center center;
+//         //                 width: 100%;
+//         //                 // max-height: 100%;
+//         //                 height: 70vh;
 
-        //             }
+//         //             }
 
-        //             img,
-        //             video {
-        //                 width: 100%;
-        //                 height: 100%;
-        //             }
-        //         }
-        //     }
+//         //             img,
+//         //             video {
+//         //                 width: 100%;
+//         //                 height: 100%;
+//         //             }
+//         //         }
+//         //     }
 
 
-        //     // .cover-title {
-        //     //     height:max-content;
-        //     //     grid-column: span 1;
-        //     //     order: 1;
-        //     // }
+//         //     // .cover-title {
+//         //     //     height:max-content;
+//         //     //     grid-column: span 1;
+//         //     //     order: 1;
+//         //     // }
 
-        // }
+//         // }
 
-        div {
-            .project-preview {
-                width: 100%;
-                // grid-column: span 2;
-                // display: flex;
-                // justify-content: center;
-                // align-items: end;
-                // height: max-content;
+//         div {
+//             .project-preview {
+//                 width: 100%;
+//                 // grid-column: span 2;
+//                 // display: flex;
+//                 // justify-content: center;
+//                 // align-items: end;
+//                 // height: max-content;
 
                 
-                .preview-title {
-                    // opacity: 0;
-                    // transform: scale(1);
-                    transition: all 0.5s ease;
-                    height: fit-content;
+//                 .preview-title {
+//                     // opacity: 0;
+//                     // transform: scale(1);
+//                     transition: all 0.5s ease;
+//                     height: fit-content;
                     
-                    // box-sizing: border-box;
-                    // position: absolute;
-                    // z-index: 10;
-                    // max-width: 30vw;
-                    // margin-bottom: 2rem;
+//                     // box-sizing: border-box;
+//                     // position: absolute;
+//                     // z-index: 10;
+//                     // max-width: 30vw;
+//                     // margin-bottom: 2rem;
                     
-                    // justify-content: space-between;
-                    display: flex;
-                    gap: 0.5rem;
-                    // flex-wrap: wrap;
-                    // grid-template-columns: 1fr 1fr 1fr 1fr;
-                    // margin: 0.5rem;
+//                     // justify-content: space-between;
+//                     display: flex;
+//                     gap: 0.5rem;
+//                     // flex-wrap: wrap;
+//                     // grid-template-columns: 1fr 1fr 1fr 1fr;
+//                     // margin: 0.5rem;
 
-                    .cover-image {
-                        // width: min-content;
-                        // order: 2;
-                        transition: all 0.25s ease;
-                        margin-bottom: 0.5rem;
-                        // width: 100%;
-                        margin: 0rem;
-                        padding: 0rem;
+//                     .cover-image {
+//                         // width: min-content;
+//                         // order: 2;
+//                         transition: all 0.25s ease;
+//                         margin-bottom: 0.5rem;
+//                         // width: 100%;
+//                         margin: 0rem;
+//                         padding: 0rem;
     
-                        .image-section,
-                        .video-section,
-                        .gatsby-image-wrapper {
-                            object-fit: contain;
-                            object-position: center center;
-                            width: 100%;
-                            height: 100%;
+//                         .image-section,
+//                         .video-section,
+//                         .gatsby-image-wrapper {
+//                             object-fit: contain;
+//                             object-position: center center;
+//                             width: 100%;
+//                             height: 100%;
                             
-                        }
+//                         }
                         
-                        img,
-                        video {
-                            width: auto;
-                            height: 6vh;
-                            object-fit:contain;
-                            object-position: center center;
-                            border-radius: 1rem;
+//                         img,
+//                         video {
+//                             width: auto;
+//                             height: 6vh;
+//                             object-fit:contain;
+//                             object-position: center center;
+//                             border-radius: 1rem;
     
-                        }
-                    }
+//                         }
+//                     }
 
                     
-                    h1 {
-                        display: inline-flex;
-                        // width: fit-content;
-                        height: fit-content;
+//                     h1 {
+//                         display: inline-flex;
+//                         // width: fit-content;
+//                         height: fit-content;
 
-                        // padding: 0.75rem;
-                        // background: rgb(254, 214, 54);
-                        // border-radius: 2rem;
+//                         // padding: 0.75rem;
+//                         // background: rgb(254, 214, 54);
+//                         // border-radius: 2rem;
 
-                        // grid-column: span 4;
-                        font-size: 3.25rem;
-                        font-weight: 90;
-                        line-height: 2.75rem;
-                        font-family: "Kleukens";
-                        display: block;
-                        // order: 3;
-                        // width: 100%;
-                        // grid-column: span 3;
-                    }
+//                         // grid-column: span 4;
+//                         font-size: 3.25rem;
+//                         font-weight: 90;
+//                         line-height: 2.75rem;
+//                         font-family: "Kleukens";
+//                         display: block;
+//                         // order: 3;
+//                         // width: 100%;
+//                         // grid-column: span 3;
+//                     }
                     
-                    h2 {
-                        // order: 3;
-                        width: fit-content;
-                        height: fit-content;
+//                     h2 {
+//                         // order: 3;
+//                         width: fit-content;
+//                         height: fit-content;
 
-                        // padding: 0.75rem;
-                        // background: rgb(254, 214, 54);
-                        // border-radius: 2rem;
+//                         // padding: 0.75rem;
+//                         // background: rgb(254, 214, 54);
+//                         // border-radius: 2rem;
                         
-                        // grid-column: span 1;
+//                         // grid-column: span 1;
 
-                        display: inline;
-                        vertical-align: top;
-                        font-size: 1.5rem;
-                        font-family: Kleukens;
-                        // width: 50%;
+//                         display: inline;
+//                         vertical-align: top;
+//                         font-size: 1.5rem;
+//                         font-family: Kleukens;
+//                         // width: 50%;
 
-                        // margin: 0rem 0.5rem;
-                        // vertical-align: top;
-                    }
+//                         // margin: 0rem 0.5rem;
+//                         // vertical-align: top;
+//                     }
 
-                    // .type {
-                    //     grid-column: 2/5;
-                    //     text-align: end;
+//                     // .type {
+//                     //     grid-column: 2/5;
+//                     //     text-align: end;
 
-                    // }
+//                     // }
 
-                    // .collaborators {
-                    //     // grid-column: span 2;
-                    //     display: inline;
-                    //     grid-column: 2/5;
+//                     // .collaborators {
+//                     //     // grid-column: span 2;
+//                     //     display: inline;
+//                     //     grid-column: 2/5;
 
-                    // }
+//                     // }
 
-                    .work-year,
-                    .blog-type {
-                        display: none;
-                    }
-                }
+//                     .work-year,
+//                     .blog-type {
+//                         display: none;
+//                     }
+//                 }
 
-            }
+//             }
 
-            .project-preview:hover {
-                .cover-title {
-                    transform: scale(1);
-                }
-            }
-        }
-
-    }
-
-}
-
-// .hero.work-section{
-//     // display: grid;
-//     // grid-template-columns: 1fr 1fr;
-
-//     .project-list{
-//         .div{
-//             grid-column: span 1;
-
+//             .project-preview:hover {
+//                 .cover-title {
+//                     transform: scale(1);
+//                 }
+//             }
 //         }
-//         .full-width {
-//             grid-column: span 1;
+
+//     }
+
+// }
+
+// // .hero.work-section{
+// //     // display: grid;
+// //     // grid-template-columns: 1fr 1fr;
+
+// //     .project-list{
+// //         .div{
+// //             grid-column: span 1;
+
+// //         }
+// //         .full-width {
+// //             grid-column: span 1;
+// //         }
+// //     }
+// // }
+
+// .work-page {
+//     min-height: 100vh;
+//     width: 100vw;
+
+// }
+
+
+// .workpostcover {
+//     display: grid;
+//     grid-template-columns: repeat(12, 1fr);
+//     margin-bottom: 5.5rem;
+
+//     .cover-title {
+//         position: absolute;
+//         bottom: 1rem;
+//         z-index: 1;
+
+//         padding: 1rem;
+//         grid-column: 1/13;
+//         gap: 1rem;
+
+//         display: grid;
+//         grid-template-columns: repeat(12, 1fr);
+
+//     }
+
+//     .headline {
+//         grid-column: span 4;
+
+//     }
+
+//     h1 {
+//         display: inline;
+//         font-family: Kleukens;
+
+//         font-size: 3rem;
+//         line-height: 3rem;
+//         // background-color: rgb(254, 214, 54);
+//         color: black;
+//     }
+
+//     h2 {
+//         display: inline;
+//         grid-column: span 3;
+//         font-family: Kleukens;
+//         font-size: 1.8rem;
+//         // background-color: rgb(254, 214, 54);
+//         color: black;
+//     }
+
+
+//     .collaborators {
+//         grid-column: span 3;
+//     }
+
+//     // .subhead {
+//     //     grid-column: 1/13;
+//     //     display: flex;
+//     //     justify-content: space-between;
+//     //     margin-bottom: 1rem;
+
+//     //     h2 {
+//     //         // width: 16vw;
+//     //         font-family: Kleukens;
+//     //         font-size: 1.8rem;
+//     //     }
+//     // }
+
+//     .cover-image {
+//         grid-column: 1/13;
+//         height: 100vh;
+
+//         // overflow: hidden;
+//         div {
+//             // width: 100%;
+//             // height: 100%;
+//         }
+//     }
+
+//     .fullwidth-image {
+//         // grid-column: 3/10;
+
+//         overflow: hidden;
+//         width: 100vw;
+//         height: 80vh;
+
+//         div {
+//             width: 100%;
+//             height: 100%;
+
+//             display: flex;
+//             align-items: center;
+//             overflow: hidden;
+
+//             img,
+//             video {
+//                 object-fit: contain;
+//             }
+
 //         }
 //     }
 // }
 
-.work-page {
-    min-height: 100vh;
-    width: 100vw;
+// .work-post-content {
+//     padding: 1rem;
+//     display: grid;
+//     grid-template-columns: repeat(12, 1fr);
+//     gap: 1rem;
 
-}
+//     .description {
+//         grid-column: span 9;
+//         margin-bottom: 3.5rem;
 
+//         p {
+//             font-size: 2rem;
+//             line-height: 2.2rem;
+//         }
+//     }
 
-.workpostcover {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    margin-bottom: 5.5rem;
+//     .image-section {
+//         width: 100%;
+//         display: flex;
+//         flex: 1 1 0;
 
-    .cover-title {
-        position: absolute;
-        bottom: 1rem;
-        z-index: 1;
+//         gap: 1rem;
 
-        padding: 1rem;
-        grid-column: 1/13;
-        gap: 1rem;
+//         div {
+//             flex-basis: 100%;
+//         }
+//     }
 
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
+//     .text-section {
+//         max-width: 100%;
+//         display: flex;
+//         gap: 1rem;
+//     }
+// }
 
-    }
-
-    .headline {
-        grid-column: span 4;
-
-    }
-
-    h1 {
-        display: inline;
-        font-family: Kleukens;
-
-        font-size: 3rem;
-        line-height: 3rem;
-        // background-color: rgb(254, 214, 54);
-        color: black;
-    }
-
-    h2 {
-        display: inline;
-        grid-column: span 3;
-        font-family: Kleukens;
-        font-size: 1.8rem;
-        // background-color: rgb(254, 214, 54);
-        color: black;
-    }
-
-
-    .collaborators {
-        grid-column: span 3;
-    }
-
-    // .subhead {
-    //     grid-column: 1/13;
-    //     display: flex;
-    //     justify-content: space-between;
-    //     margin-bottom: 1rem;
-
-    //     h2 {
-    //         // width: 16vw;
-    //         font-family: Kleukens;
-    //         font-size: 1.8rem;
-    //     }
-    // }
-
-    .cover-image {
-        grid-column: 1/13;
-        height: 100vh;
-
-        // overflow: hidden;
-        div {
-            // width: 100%;
-            // height: 100%;
-        }
-    }
-
-    .fullwidth-image {
-        // grid-column: 3/10;
-
-        overflow: hidden;
-        width: 100vw;
-        height: 80vh;
-
-        div {
-            width: 100%;
-            height: 100%;
-
-            display: flex;
-            align-items: center;
-            overflow: hidden;
-
-            img,
-            video {
-                object-fit: contain;
-            }
-
-        }
-    }
-}
-
-.work-post-content {
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 1rem;
-
-    .description {
-        grid-column: span 9;
-        margin-bottom: 3.5rem;
-
-        p {
-            font-size: 2rem;
-            line-height: 2.2rem;
-        }
-    }
-
-    .image-section {
-        width: 100%;
-        display: flex;
-        flex: 1 1 0;
-
-        gap: 1rem;
-
-        div {
-            flex-basis: 100%;
-        }
-    }
-
-    .text-section {
-        max-width: 100%;
-        display: flex;
-        gap: 1rem;
-    }
-}
-
-p.caption {
-    margin-top: 0.2rem;
-    font-family: Kleukens;
-    font-size: 0.8rem;
-}
+// p.caption {
+//     margin-top: 0.2rem;
+//     font-family: Kleukens;
+//     font-size: 0.8rem;
+// }
